# xd-whiteboard

./: .gitignore  README-zh.md  README.md  index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
design/warm-minimalist/: README.md  colors_and_type.css  xd-whiteboard-warm.design
design/warm-minimalist/pages/: context-menu.html  empty-state.html  main-editor.html  menu-system.html  settings-about.html
patches/: @excalidraw+excalidraw+0.18.1.patch
public/fonts/: fonts.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  security.rs
src/components/: AppMenuBar.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  ExcalidrawEditor.tsx  LibraryInstallDialog.tsx  PreferencesDialog.tsx  Sidebar.test.tsx  Sidebar.tsx  TreeView.tsx  UnsavedChangesDialog.tsx
src/components/ui/: alert-dialog.tsx  context-menu.tsx  dialog.tsx  menubar.tsx
src/constants/: index.ts
src/context/: ExcalidrawAPIContext.tsx
src/hooks/: useConfirmDialog.ts  useExcalidrawActions.ts  useI18n.tsx  useKeyboardShortcuts.ts  useMenuHandler.ts  useUnsavedDialog.ts
src/lib/: i18n.ts  preferences.ts  treeUtils.test.ts  treeUtils.ts
src/store/: types.ts  useStore.test.ts  useStore.ts
src/store/slices/: createFileSlice.ts  createLibrarySlice.ts  createPreferenceSlice.ts  createUISlice.ts
src/types/: excalidraw.ts  index.ts
