[package]
name = "xd-whiteboard"
version = "1.3.1"
description = "小呆画板 - A whiteboard application"
authors = ["风竹"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xd_whiteboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dunce = "1"

[profile.release]
# 体积更小、性能更好的 release 二进制。
# 代价是编译时间变长，但 release 构建频率低，值得。
# 注意：不启用 panic = "abort"，避免 watcher 等子线程 panic 时整个进程立即崩溃。
lto = true
codegen-units = 1
strip = true
